fix: text overflowing in file attachments

--- a/client/style.css
+++ b/client/style.css
@@ -1057,7 +1057,6 @@ a {
 
 .attachment {
     width: 25%;
-    border: 6px solid rgba(0, 0, 0, 0.5);
     border-radius: 12px;
     margin-top: 5px;
     background: rgba(0, 0, 0, 0.4);
